--- a/client/src/index.css
+++ b/client/src/index.css
@@ -111,3 +111,24 @@ button {
   padding: 10px;
   border-radius: 4px;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-left: 2rem;
+}
+
+input {
+  margin-top: 1rem;
+}
+
+.missing {
+  border: 4px solid #d36443;
+  border-radius: 0.25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.warning {
+  color: #d36443;
+}
