--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,8 @@ header>div {
 
 .headerImg {
   margin-left: 30px;
-  max-height: 50px;
+  max-height: 80px;
+  padding: 10px;
 }
 
 .nav-links {
@@ -41,6 +42,13 @@ header>div {
 
 .nav-spacer {
   margin: 0 auto;
+}
+
+h3,
+h2 {
+  font-weight: bold;
+  text-align: center;
+  font-size: 2rem;
 }
 
 footer {
@@ -89,9 +97,17 @@ footer {
   justify-content: center;
 }
 
-.productContent span {
+.infoWrapper {
   margin: 0 10px;
   white-space: pre-wrap;
+}
+
+.infoWrapper button {
+  margin-top: 10px;
+}
+
+.infoWrapper p {
+  margin-top: 10px;
 }
 
 @media (min-width: 1024px) {
@@ -99,7 +115,7 @@ footer {
     max-width: 60%;
   }
 
-  .productContent span {
+  .infoWrapper {
     max-width: 30%;
   }
 }
@@ -126,7 +142,7 @@ input {
 .missing {
   border: 4px solid #d36443;
   border-radius: 0.25rem;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .warning {
