--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,7 @@ header>div {
   align-self: center;
   justify-content: flex-end;
   margin-right: 20px;
+  color: #81b29a;
 }
 
 .nav-links a {
@@ -135,7 +136,7 @@ footer {
 
 button {
   background-color: #264653;
-  color: #2a9d8f;
+  color: #81b29a;
   border: 2px #3D405B solid;
   padding: 10px;
   border-radius: 4px;
