--- a/client/src/pages/AboutUs.css
+++ b/client/src/pages/AboutUs.css
@@ -1,23 +1,3 @@
-/* .accordion-item:first-of-type .accordion-button {
-  border-top-left-radius: calc(0.5rem - 1px);
-  border-top-right-radius: calc(0.5rem - 1px);
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-} */
-/* 
-.accordion-button:focus {
-  z-index: 3;
-}
-
-.accordion-button:hover {
-  z-index: 2;
-}
-
-.transition {
-  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
-  transition-timing-function: cubic-bezier(.4,0,.2,1);
-  transition-duration: 150ms;
+/* #accordion-container{
+mx-auto
 } */
