updated hero image and deleted old assets

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,8 @@ header>div {
 .heroImage {
   height: 200px;
   overflow: hidden;
+  background: url(https://res.cloudinary.com/dfamiaufc/image/upload/v1651960530/Hobby%20Box/heroImage_x00w0v.webp) center center no-repeat;
+  background-attachment: fixed;
 }
 
 h3,
@@ -186,6 +188,10 @@ input {
 
 .trash-button {
   padding-right: 10px;
+}
+
+.trash-button:hover {
+  cursor: pointer;
 }
 
 .cart-item {
