--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -1,7 +1,7 @@
 .cart {
   position: fixed;
   top: 80px;
-  right: 0;
+  right: 10px;
   min-width: 20%;
   max-width: 30%;
   max-height: 60%;
@@ -35,13 +35,13 @@
   position: fixed;
   top: 100px;
   right: 1%;
-  font-size: 2rem;
+  font-size: 2rem !important;
   cursor: pointer;
   background-color: var(--secondary);
-  border-radius: 50%;
-  padding: .25rem;
-  width: 50px;
-  height: 50px;
+  border-radius: 50% !important;
+  padding: .25rem !important;
+  width: 50px !important;
+  height: 50px !important;
 }
 
 .cart-closed span {
